config/k8s/ckan-permission.yaml
# CKAN Frontend 
apiVersion: v1
kind: Pod
metadata:
  name: ckan-permission-setup 
  namespace: ckan
spec:
  containers:
  - name: ckan-permission-setup 
    image: cityofcapetown/data-portal 
    volumeMounts:
    - mountPath: "/etc/ckan/production.ini"
      subPath: "production.ini"
      name: production-config
    - mountPath: "/etc/ckan/who.ini"
      subPath: "who.ini"
      name: who-config
    args:
    - "ckan-paster"
    - "serve"
    - "/etc/ckan/production.ini"
  restartPolicy: Never
  volumes:
    - name: production-config
      configMap:
        name: production-ini
    - name: who-config
      configMap:
        name: who-ini
