config/k8s/ckan-frontend.yaml
# CKAN Frontend 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ckan-frontend
  namespace: ckan
spec:
  selector:
    matchLabels:
      run: ckan-frontend
  replicas: 1
  template:
    metadata:
      labels:
        run: ckan-frontend
    spec:
      containers:
      - name: ckan-frontend
        image: cityofcapetown/data-portal
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: "/var/lib/ckan"
          name: ckan-data
        - mountPath: "/etc/ckan/production.ini"
          subPath: "production.ini"
          name: production-config
        - mountPath: "/etc/ckan/who.ini"
          subPath: "who.ini"
          name: who-config
      volumes:
        - name: production-config
          configMap:
            name: production-ini
        - name: who-config
          configMap:
            name: who-ini
        - name: ckan-data
          persistentVolumeClaim:
            claimName: ckan-data
---
apiVersion: v1
kind: Service
metadata:
  name: ckan-frontend
  namespace: ckan
  labels:
    run: ckan-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    run: ckan-frontend
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ckan-frontend
  namespace: ckan 
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host:  
    http:
      paths:
      - path: /data-catalogue
        backend:
          serviceName: ckan-frontend
          servicePort: 80
---
